2012-08-27

	* src/auth.h:
	* src/auth.c:
	* src/message.c: Record the time the last COMMIT was sent from a
	master context.  This will be used to clear the committed key
	from the master context once we don't expect any more instances
	of our buddy to respond with a DHKEY message.

	* UPGRADING:
	* src/userstate.h:
	* src/userstate.c:
	* src/message.h:
	* src/message.c: Add a timer_control callback to
	OtrlMessageAppOps in order to actually clear out the above stale
	committed keys.

2012-08-26

	* src/context.c:
	* src/context_priv.c:
	* src/context_priv.h: libotr was exporting exactly two functions
	without the otrl_ prefix: context_priv_new and
	context_priv_force_finished.  Change the names of these
	functions to start with otrl_.  Thanks to David Goulet
	<dgoulet@ev0ke.net> for noticing it.

	* Protocol-v3.html: Document the v3 whitespace tag, and better
	document the extra symmetric key.  Thanks to Kjell Braden
	<kb@pentabarf.de> for noticing the omission.

2012-08-25

	* src/sm.c:
	* src/context.c:
	* src/auth.c:
	* src/message.c: If OTRL_DEBUGGING is non-zero, then a message
	containing a special debug string ("?OTR!") will cause debug
	info to be printed to stderr.  (This #define should *not* be set
	in release code.)

	* src/auth.c:
	* src/auth.h:
	* src/message.c: Correct the logic for handling incoming COMMIT
	messages when we've recently sent our own COMMIT message.

	* src/message.c: Don't update the recent_sent_child field to
	point to the master context just becuase we sent a version 3
	COMMIT message (which has no destination instance).

2012-08-24

	* README:
	* configure.ac: Prepare for release 4.0.0

2012-08-24

	* src/message.c: Consider copying the master auth context to the
	child, even if the child is already in ENCRYPTED, because we
	might be trying to refresh a private conversation.

2012-08-22

	* configure.ac: Use gcc and ld hardening flags, where possible.
	* configure.ac:
	* src/auth.c:
	* src/dh.c:
	* src/mem.c:
	* src/privkey.c: